--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -23,8 +23,7 @@
     </div>
   </div>
 
-  <script type="text/javascript" src="./shoppinglist.js">
-
-  </script>
+  <script type="text/javascript" src="./shoppinglist.js"></script>
+  <script type="text/javascript" src="./simple-number.js"></script>
   </body>
 </html>
