--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -25,5 +25,6 @@
 
   <script type="text/javascript" src="./shoppinglist.js"></script>
   <script type="text/javascript" src="./simple-number.js"></script>
+  <script type="text/javascript" src="./fizzbuzz.js"></script>
   </body>
 </html>
