--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -26,5 +26,6 @@
   <script type="text/javascript" src="./shoppinglist.js"></script>
   <script type="text/javascript" src="./simple-number.js"></script>
   <script type="text/javascript" src="./fizzbuzz.js"></script>
+  <script type="text/javascript" src="./recursion.js"></script>
   </body>
 </html>
