Added find-max-number.js file

--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -27,5 +27,6 @@
   <script type="text/javascript" src="./simple-number.js"></script>
   <script type="text/javascript" src="./fizzbuzz.js"></script>
   <script type="text/javascript" src="./recursion.js"></script>
+  <script type="text/javascript" src="./find-max-number.js"></script>
   </body>
 </html>
