Added palindrome.js , simple-numbers-upd.js

--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -9,13 +9,13 @@
       <h1>Shopping list</h1>
     <div class="orange-div">
       <div class="list-div">
-  			<input type="color" id="colorinput" value="">
+  			<input type="color" id="colorinput" >
   			<button type="button" onclick="colorButton()">Change List color</button>
   			<ul id="ul">
 
   			</ul>
         <div class="input-div">
-    			<input type="text" id="input" value="">
+    			<input type="text" id="input" >
     			<button type="button" onclick="addButton()">Add item</button>
     			<button type="button" onclick="removeButton()">Remove Last item</button>
         </div>
@@ -28,5 +28,7 @@
   <script type="text/javascript" src="./fizzbuzz.js"></script>
   <script type="text/javascript" src="./recursion.js"></script>
   <script type="text/javascript" src="./find-max-number.js"></script>
+  <script type="text/javascript" src="./palindrome.js"></script>
+  <script type="text/javascript" src="./simple-numbers-upd.js"></script>
   </body>
 </html>
